--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@react-spring/web": "^9.6.1",
     "axios": "^1.3.2",
+    "classnames": "^2.3.2",
     "immer": "^9.0.19",
+    "jszip": "^3.10.1",
     "pretty-bytes": "^6.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -21,6 +23,7 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/jszip": "^3.4.1",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/react-dropzone": "^5.1.0",
